# interpreters-translators_bachelorThesis

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEMO.md  DOCUMENTATION_INDEX.md  LICENSE  Makefile  QUICKSTART.md  README.md  SETUP.md  TECHNICAL_GUIDE.md  USER_GUIDE.md  dune-project  interpreters_translators.opam  jest.config.js  package-lock.json  package.json  tsconfig.json
examples/: countdown.goto  divide.while  multiply.loop  multiply_input.loop
examples/goto/: add_test.goto  addition.goto  countdown.goto  max.goto
examples/loop/: addition.loop  factorial.loop  multiplication.loop  simple_test.loop
examples/while/: collatz.while  countdown_test.while  division.while  fibonacci.while
src/: cli.ts  dune  index.ts  interpreter.ts  lexer.ts  main.ml  parser.ts  token.ts
src/Common/: dune  state.ml  utils.ml
src/GOTO/: ast.ml  dune  interpreter.ml  lexer.mll  parser.mly
src/LOOP/: ast.ml  dune  interpreter.ml  lexer.mll  parser.mly
src/goto/: ast.ts  interpreter.ts  parser.ts
src/loop/: ast.ts  interpreter.ts  parser.ts
src/translators/: dune  gotoToWhile.ts  goto_to_while.ml  loopToWhile.ts  loop_to_while.ml  whileToGoto.ts  while_to_goto.ml
src/while/: ast.ts  interpreter.ts  parser.ts
src/while_lang/: ast.ml  dune  interpreter.ml  lexer.mll  parser.mly
test/: dune  test_goto.ml  test_loop.ml  test_translators.ml  test_while.ml
tests/: gotoInterpreter.test.ts  loopInterpreter.test.ts  whileInterpreter.test.ts
