(test
 (name test_loop)
 (modules test_loop)
 (libraries alcotest common loop))

(test
 (name test_while)
 (modules test_while)
 (libraries alcotest common while_lang))

(test
 (name test_goto)
 (modules test_goto)
 (libraries alcotest common goto))

(test
 (name test_translators)
 (modules test_translators)
 (libraries alcotest common loop while_lang goto translators))

